<resources>
    <string name="app_name">RabbitU</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="menu_home">Home</string>
    <string name="menu_book">Book</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_job_text">Good Job</string>
    <string name="nice_try_text">Nice Try</string>
    <string name="failed_timer_text">Sorry, you failed the session. You have paused for over 10 minutes. Please study more focused next time.</string>
    <string name="study_duration_text">Study Duration (Seconds)</string>
    <string name="pause_duration_text">Pause Duration (Seconds)</string>
    <string name="total_earned_text">Total Earned</string>
    <string name="redo_timer_text">Redo</string>
    <string name="home_text">Home</string>
    <string name="exit_text">Exit</string>
    <string name="crud_book">CRUD Book</string>
    <string name="add_book">Add Book</string>
    <string name="crud_music">CRUD Music</string>
    <string name="add_music">Add Music</string>
    <string name="edit_music">Edit Music</string>
    <string name="upload_button">Upload</string>
    <string name="update_button">Update</string>
    <string name="submit_button">Submit</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="start_button">Start</string>
    <string name="pause_button">Pause</string>
    <string name="reset_button">Reset</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="logout_button">Logout</string>
    <string name="music_button">Choose Music</string>
    <string name="mute_button">Mute</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="music_text">Music</string>
    <string name="music_description">Series of mixes that loops for your study sessions</string>
    <string name="music_equipped_text">(Equipped)</string>
    <string name="leaderboard_page_title">LEADERBOARD</string>

    <!-- Headings -->
    <string name="heading_one">Quick &amp; Easy Reading </string>
    <string name="heading_two">Instant Notifications</string>
    <string name="heading_three">Take Note Anywhere</string>

    <!-- Description -->
    <string name="desc_one">Encourage users to study within that range of timer set.  </string>
    <string name="desc_two">When the timer goes on, an animated rabbit will be shown to motivate the user to study and not leave the session. </string>
    <string name="desc_three">Allow users to add, edit and delete notes.</string>

    <string name="facebook_app_id">676531840627671</string>
    <string name="fb_login_protocol_scheme">fb676531840627671</string>
    <string name="facebook_client_token">795212cd0a464ae6830cd6ae55a079b8</string>

</resources>