<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_border"
    android:paddingTop="20dp"
    android:paddingHorizontal="15dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/addMusicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/add_music"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"></TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/form_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addMusicText"
        app:cardBackgroundColor="@color/whiteTextColor"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:id="@+id/form_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputName"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editMusicName"
                    style="@style/modifiedEditText"
                    android:background="@drawable/text_input_shape"
                    android:maxLines="1"
                    android:hint="Name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputID"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editMusicID"
                    style="@style/modifiedEditText"
                    android:background="@drawable/text_input_shape"
                    android:maxLines="1"
                    android:hint="ID"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputAudio"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editMusicAudio"
                    style="@style/modifiedEditText"
                    android:background="@drawable/text_input_shape"
                    android:hint="Audio Link"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitButton"
                style="@style/themeButton"
                android:text="@string/submit_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/buttonArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/form_card_view"
        android:layout_marginTop="25dp">

        <ImageButton
            android:id="@+id/exitIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/exit_icon"
            app:tint="@color/black"></ImageButton>

        <TextView
            android:id="@+id/exitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/exitIcon"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:text="@string/exit_text"
            android:textSize="15sp"
            android:textColor="@color/black">
        </TextView>

    </RelativeLayout>

</RelativeLayout>