<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/home_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/timer_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:id="@+id/timer_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_purple">

                <RelativeLayout
                    android:id="@+id/image_relative_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/back_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/bgcircle"
                        android:layout_centerInParent="true"/>

                    <ImageView
                        android:id="@+id/arrow_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/icanchor" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/details_linear_layout"
                    android:layout_toRightOf="@id/image_relative_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <Chronometer
                        android:id="@+id/timer_chronometer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="30dp"/>

                    <Button
                        android:id="@+id/button_start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/start_button"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/white"/>

                    <Button
                        android:id="@+id/button_pause"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pause_button"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/white"/>

                    <Button
                        android:id="@+id/button_reset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reset_button"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/white"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rabbitu_studying_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/rabbitStudying"
                    android:layout_width="wrap_content"
                    android:layout_height="380dp"
                    android:src="@drawable/rabbitu_studying"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/half_rounded"
        app:itemIconTint="@color/nav_color"
        app:itemTextColor="@color/nav_color"
        app:menu="@menu/menu" />

</RelativeLayout>